Improvised Yearly RoR calculation